=== Safari-113 ===

2003-11-05  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3473913 -- host names in simple mailto URLs are not getting encoded/decoded correctly yet

        * Misc.subproj/WebNSURLExtras.m:
        (applyHostNameFunctionToMailToURLString): Handle case where host name is at the end of the string.
        (applyHostNameFunctionToURLString): Add the # character to the set of characters that can end
        a domain name.

2003-11-05  Richard Williamson   <rjw@apple.com>

	Fixed 3413067, 3405797, 3456877
	Use ATSUI to render Arabic and Hebrew.

        Reviewed by John.

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (shouldUseATSU):

2003-11-05  John Sullivan  <sullivan@apple.com>

	- fixed <rdar://problem/3469791>: Bigger/Smaller commands are 
	disabled for HTML Mail in separate window (w/WebKit-111)

        Reviewed by Darin.

        * WebView.subproj/WebFrameView.m:
        (-[WebFrameView acceptsFirstResponder]):
	always be willing to become first responder, even if no page
	has yet been loaded.
        (-[WebFrameView becomeFirstResponder]):
	if no page has yet been loaded (so our scrollview refuses
	first responder-ness), don't do any special becoming-first-
	responder shenanigans.

	Also removed obsolete overrides for nextKeyView, nextValidKeyView,
	previousKeyView, and previousValidKeyView that are no longer
	required now that we handle the key loop more like NSScrollView.

        * WebView.subproj/WebFrameViewPrivate.h:
	removed now-unused ivar inNextValidKeyView

2003-11-05  Richard Williamson   <rjw@apple.com>

	Fixed 3029966.  Animated backgrounds specified in <BODY> don't animate
	Fixed 3474824.  Tiled animated GIFs don't animate.
	Fixed 3029966.  Animated backgrounds specified with CSS don't animate.

        Reviewed by Chris.

        * WebCoreSupport.subproj/WebImageRenderer.h:
        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer nextFrame:]):