@@ -328,6 +328,7 @@ static BOOL forceRealHitTest = NO;
     }
     
     [super scrollPoint:point];
+    [[self superview] _web_scrollPointToVisible:point fromView: self];
 }
 
 - (NSView *)hitTest:(NSPoint)point
